--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -79,6 +79,10 @@ header h1 {
   -webkit-font-smoothing: antialiased;
 }
 
+img {
+  width: 100%;
+}
+
 header h2 {
   font-size: 18px;
   font-weight: 300;
