add Acoustic writeup
add Acoustic writeup

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -99,7 +99,9 @@ header h2 {
 section img {
   max-width: 100%
 }
-
+#img2 { 
+  width: 50%;
+}
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
